--- a/src/components/LoginForm/index.css
+++ b/src/components/LoginForm/index.css
@@ -10,7 +10,7 @@
 }
 
 @media screen and (min-width: 992px) {
-  .login-form-container {
+  .login-page-container {
     flex-direction: row;
     justify-content: space-around;
   }
@@ -108,6 +108,28 @@
   margin-top: 5px;
   padding: 8px 16px 8px 16px;
   outline: none;
+}
+
+.show-password-container {
+  width: 100%;
+  margin-top: 8px;
+
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.show-password-check-box {
+  height: 14px;
+  width: 14px;
+  margin-right: 8px;
+}
+
+.show-password-label {
+  font-family: 'Roboto';
+  font-weight: 400;
+  font-size: 13px;
+  color: #64748b;
 }
 
 .login-button {
