--- a/src/components/NotFound/index.css
+++ b/src/components/NotFound/index.css
@@ -1,11 +1,45 @@
 .not-found-container {
+  width: 100%;
+  height: 100vh;
+
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 70vh;
 }
 
 .not-found-img {
-  width: 400px;
+  width: 80%;
+  max-width: 400px;
+  margin-bottom: 4%;
+}
+
+.anchor-tag {
+  font-family: 'Roboto';
+  font-size: 28px;
+  font-weight: 500;
+  text-decoration: none;
+
+  padding: 10px 20px;
+  border-radius: 6px;
+
+  color: #fff;
+  background-color: #53ccd4;
+}
+
+.page-not-found-text {
+  font-family: 'Roboto';
+  font-size: 30px;
+  font-weight: 500;
+
+  color: #000000;
+}
+
+.page-not-found-suggestion {
+  font-family: 'Roboto';
+  font-size: 16px;
+  font-weight: 400;
+  text-align: center;
+
+  color: #000000;
 }
